--- a/config/v1/scraping_config.json
+++ b/config/v1/scraping_config.json
@@ -1,11 +1,11 @@
 {
     "output_base_path": "data/Training",
     "version": "v1",
-    "mode": "train",
+    "mode": "validation",
     "limits": {
         "image_limit_per_term": 250,
-        "max_image_limit_per_class": 1250,
-        "min_image_limit_per_class": 1250
+        "max_image_limit_per_class": 500,
+        "min_image_limit_per_class": 500
     },
     "min_resolution": [
         50,
