--- a/config/v1/scraping_config.json
+++ b/config/v1/scraping_config.json
@@ -1,10 +1,10 @@
 {
     "output_base_path": "data/Training",
     "version": "v1",
-    "mode": "train",
+    "mode": "validation",
     "limits": {
-        "max_image_limit_per_class": 2000,
-        "min_image_limit_per_class": 2000
+        "max_image_limit_per_class": 500,
+        "min_image_limit_per_class": 500
     },
     "min_resolution": [
         50,
@@ -17,11 +17,11 @@
         "png",
         "webp"
     ],
-    "sleep_between_queries": 3,
+    "sleep_between_queries": 10,
     "retry_on_rate_limit": {
         "enabled": true,
-        "max_retries": 3,
-        "wait_seconds": 5
+        "max_retries": 7,
+        "wait_seconds": 10
     },
     "use_trusted_domains": false,
     "trusted_domains_path": "config/v1/trusted_domains.txt",
